--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
-Package: piecenorm
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Package: piecenorms
+Title: Calculate a Piecewise Normalised Score Using Class Intervals
+Version: 0.0.1
+Authors@R: person("David", "Hammond", email = "anotherdavidhammond@gmail.com", role = c("aut", "cre"))
+Author: David Hammond [aut, cre]
+URL: https://github.com/david-hammond/rescaleR
+BugReports: https://github.com/david-hammond/rescaleR
+Maintainer: David Hammond <anotherdavidhammond@gmail.com>
+Description: This package provides implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0)
@@ -12,3 +14,13 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Imports: 
+    dplyr,
+    COINr,
+    rlang,
+    scales,
+    tidyr,
+    readr
+Depends: 
+    R (>= 2.10)
+LazyData: true
