--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: piecenorms
 Title: Calculate a Piecewise Normalised Score Using Class Intervals
-Version: 0.0.1
+Version: 1.0.0
 Authors@R: person("David", "Hammond", email = "anotherdavidhammond@gmail.com", role = c("aut", "cre"))
 Author: David Hammond [aut, cre]
 URL: https://github.com/david-hammond/piecenorms
-BugReports: https://github.com/david-hammond/piecenorms
+BugReports: https://github.com/david-hammond/piecenorms/issues
 Maintainer: David Hammond <anotherdavidhammond@gmail.com>
-Description: This package provides implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data.
+Description: Provides an implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0)
@@ -16,7 +16,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     dplyr,
-    COINr,
     rlang,
     scales
 Depends: 
