--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,29 @@
 Package: piecenorms
 Title: Calculate a Piecewise Normalised Score Using Class Intervals
-Version: 1.0.0
+Version: 1.1.0
 Authors@R: person("David", "Hammond", email = "anotherdavidhammond@gmail.com", role = c("aut", "cre"))
 Author: David Hammond [aut, cre]
 URL: https://github.com/david-hammond/piecenorms
 BugReports: https://github.com/david-hammond/piecenorms/issues
 Maintainer: David Hammond <anotherdavidhammond@gmail.com>
-Description: Provides an implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data.
+Description: Provides an implementation of piecewise normalisation techniques useful when dealing with the communication of skewed and highly skewed data. It also provides utilities that recommends a normalisation technique based on the distribution of the data.
 License: MIT + file LICENSE
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
     dplyr,
     rlang,
-    scales
+    scales,
+    R6,
+    classInt,
+    univariateML,
+    COINr,
+    stats,
+    vdiffr
 Depends: 
     R (>= 2.10)
 LazyData: true
